# guitarbiro

./: .gitignore  CMakeLists.txt  README.md
include/: audio.h  check_float.h  detect.h  gui.h  guitar.h  period_estimator.h  record.h
resources/: A2_string5.pcm  A4_string1.pcm  B3_string2.pcm  D3_string4.pcm  E2_string6.pcm  E4_string1.pcm  G3_string3.pcm  main_window.glade
src/: audio_init.c  audio_record.c  detect.c  gui.c  guitar.c  main.c  period_estimator.c  record.c
tests/: CMakeLists.txt  check_guitar.c  check_period_estimator.c
